[package]
name = "nookd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
libc = "0.2.153"
reqwest = { version = "0.11.24", features = ["blocking"] }
rodio = "0.17.3"
tokio = { version = "1.36.0", features = ["full"] }
